--- a/includes/CODE/xxx.html
+++ b/includes/CODE/xxx.html
@@ -16,7 +16,7 @@
         <main>
 
             <!-- video on this page -->
-            <video class="vids" id="current_vid" width="850" height="480" src="Video/54._Threesome_1080p.mp4" controls loop playsinline></video>
+            <video class="vids" id="current_vid" width="850" height="480" src="" controls loop playsinline></video>
 
             <!--- imports the javascript file -->
             <script src="./index.js"></script>
